--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Our Legends</title>
-    <link rel="stylesheet" type="text/css" href="home-page.css">
+    <link rel="stylesheet" type="text/css" href="CSS/home-page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link href="../footer/footer.css" type="text/css" rel="stylesheet">
+    <link href="CSS/footer.css" type="text/css" rel="stylesheet">
 
 </head>
 <body>
     <header>
-        <img src="../images/OurLegendsLogo.png" ; id="logo">
+        <img src="images/OurLegendsLogo.png" ; id="logo">
         <input type="text" placeholder="Search for a legend" id="search">
     </header>
     <main class="container">
@@ -22,37 +22,37 @@
         <div class="boardOfLegend">
             <div class="legend">
                 <a href="javascript:notExists()">
-                    <img src="../images/amitAvrutsky.jpeg" alt="עמית אברוצקי">
+                    <img src="images/amitAvrutsky.jpeg" alt="עמית אברוצקי">
                     <h2>עמית אברוצקי</h2>
                 </a>
             </div>
             <div class="legend">
                 <a href="javascript:notExists()">
-                    <img src="../images/gilBanks.jpeg" alt="גיל בנקס">
+                    <img src="images/gilBanks.jpeg" alt="גיל בנקס">
                     <h2>גיל בנקס</h2>
                 </a>
             </div>
             <div class="legend">
                 <a href="javascript:notExists()">
-                    <img src="../images/natalieGilad.jpeg" alt="נטלי גיל-עד">
+                    <img src="images/natalieGilad.jpeg" alt="נטלי גיל-עד">
                     <h2>נטלי גיל-עד</h2>
                 </a>
             </div>
             <div class="legend">
-                <a href="../personal-memorial-page/personal-memorial-page.html">
-                    <img src="../images/orAshkar.png" alt="אור אשכר">
+                <a href="Includes/personal-memorial-page.html">
+                    <img src="images/orAshkar.png" alt="אור אשכר">
                     <h2>אור אשכר</h2>
                 </a>
             </div>
         </div>
-        <a href="../add-new-page/add-new-page.html" class="button">יצירת דף הנצחה חדש</a>
+        <a href="Includes/add-new-page.html" class="button">יצירת דף הנצחה חדש</a>
     </main>
 
     <footer id="footerContainer"></footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../footer/footer.js" type="text/javascript"></script>
-    <script src="home-page.js" type="text/javascript"></script>
+    <script src="JS/footer.js" type="text/javascript"></script>
+    <script src="JS/home-page.js" type="text/javascript"></script>
 
 
 </body>
